<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/base_settings">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="switch_no_picture_mode"
            android:layout="@layout/layout_pref"
            android:summary="@string/switch_no_picture_mode"
            android:title="@string/switch_picture_mode" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other_settings">
        <Preference
            android:key="clearCache"
            android:layout="@layout/layout_pref"
            android:title="@string/clear_cache" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_settings">
        <Preference
            android:key="version"
            android:layout="@layout/layout_pref"
            android:title="@string/version"/>
        <Preference
            android:key="sourceCode"
            android:layout="@layout/layout_pref"
            android:summary="@string/source_code_url"
            android:title="@string/source_code" />

        <Preference
            android:key="copyRight"
            android:layout="@layout/layout_pref"
            android:summary="@string/copyright_summary"
            android:title="@string/copyright" />
    </PreferenceCategory>
</PreferenceScreen>