<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_home"
          android:title="@string/home"
          android:enabled="true"
          android:icon="@drawable/ic_home_black_24dp"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_knowledge_system"
          android:title="@string/knowledge_system"
          android:icon="@drawable/ic_apps_black_24dp"
          android:enabled="true"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_wx_account"
          android:title="@string/wx_account"
          android:icon="@drawable/ic_supervisor_account_black_24dp"
          android:enabled="true"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_navigation"
          android:title="@string/navigation"
          android:icon="@drawable/ic_navigation"
          android:enabled="true"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_project"
          android:title="@string/project"
          android:icon="@drawable/ic_project"
          android:enabled="true"
          app:showAsAction="ifRoom"/>
</menu>