<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_login"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_64"
        android:src="@mipmap/icon"
        app:civ_border_color="@color/white"
        app:civ_border_width="@dimen/dp_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_48"
        android:layout_marginRight="@dimen/dp_24"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/Grey200"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@mipmap/ic_username"
                android:drawableLeft="@mipmap/ic_username"
                android:drawablePadding="@dimen/dp_8"
                android:hint="@string/hint_username"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:lines="1"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textColorHint="@color/Grey400" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/Grey200"
            app:hintEnabled="false"
            app:passwordToggleDrawable="@drawable/ic_password_visibility_selector"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#50ffffff">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@mipmap/ic_password"
                android:drawableLeft="@mipmap/ic_password"
                android:drawablePadding="@dimen/dp_8"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/white"
                android:textColorHint="@color/Grey400" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_remember_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/dp_8"
        android:button="@drawable/ic_remember_password_selector"
        android:checked="true"
        android:padding="@dimen/dp_8"
        android:text="@string/remember_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/Grey200"
        app:layout_constraintLeft_toLeftOf="@id/ll_form"
        app:layout_constraintTop_toBottomOf="@id/ll_form" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cb_forget_password"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/cb_remember_password"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/dp_8"
        android:checked="true"
        android:minHeight="0dp"
        android:padding="@dimen/dp_8"
        android:text="@string/forget_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/Grey200"
        app:layout_constraintRight_toRightOf="@id/ll_form"
        app:layout_constraintTop_toBottomOf="@id/ll_form" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/cb_remember_password"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/btn_round_rect_bg"
        android:gravity="center"
        android:text="@string/btn_login"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toLeftOf="@id/ll_form"
        app:layout_constraintRight_toRightOf="@id/ll_form"
        app:layout_constraintTop_toBottomOf="@id/cb_forget_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_register"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginRight="@dimen/dp_8"
        android:drawableRight="@mipmap/ic_right"
        android:drawablePadding="@dimen/dp_4"
        android:minHeight="0dp"
        android:padding="@dimen/dp_8"
        android:text="@string/btn_register_msg"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/Red"
        app:layout_constraintLeft_toLeftOf="@id/btn_login"
        app:layout_constraintRight_toRightOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

</androidx.constraintlayout.widget.ConstraintLayout>